# fath

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: comparisons.rs
src/: lib.rs  main.rs
src/comp_test/: mod.rs
src/scalar/: conv.rs  float.rs  int.rs  mod.rs
src/shared/: conv.rs  float.rs  int.rs  mod.rs  platform.rs
src/shared/int/: consts.rs  mod.rs
src/simd/: const.rs  conv.rs  float.rs  int.rs  mod.rs
src/simd/platform/: dyn_swizzle.rs  mod.rs
src/test/: checks.rs  compile.rs  helpers.rs  mod.rs
src/tests/: main.rs
