[package]
name = "fath"
authors = [ "burgerindividual", "duplexsystem" ]
version = "0.1.7"
edition = "2021"
license = "LGPL-3.0"
repository = "https://github.com/burgerindividual/fath"
description = "Math library built for speed. Includes configurable-precision approximations and exact functions for both ints and floats. Uses cross-platform intrinsics and SIMD whenever possible."
keywords = ["math", "no_std", "fast", "simd", "approximation"]

[dev-dependencies]
rand = "0.8.5"

[profile.test]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
# for some reason, LTO kills auto-vectorization here.
# lto = "fat"
